--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
+  Click-7.0.tar.gz: fcbbb6d25b8eb45f7919e8605ec33b33583b0217
   click-6.7.tar.gz: c16e7cb561a40c385ae8d1a50528e549cc1d8e94
